// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster Actions Dropdown Items admin console url does not exist should render (no console) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Launch Admin Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editcluster"
    tooltip={
      <span>
        Self managed cluster cannot be edited
      </span>
    }
  >
    Scale Cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state not ready should render (not ready) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Launch Admin Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editcluster"
    tooltip={
      <span>
        This cluster is not ready
      </span>
    }
  >
    Scale Cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.deletecluster"
    onClick={[Function]}
  >
    Delete Cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state ready and console url should render 1`] = `
<Fragment>
  <DropdownItem
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noreferrer"
    target="_blank"
  >
    Launch Admin Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editdisplayname"
    onClick={[Function]}
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editcluster"
    onClick={[Function]}
  >
    Scale Cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.deletecluster"
    onClick={[Function]}
  >
    Delete Cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state uninstalling should render (uninstalling) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Launch Admin Console
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editdisplayname"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editcluster"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Scale Cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.deletecluster"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Delete Cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items read only cluster should render correctly 1`] = `
<Fragment>
  <DropdownItem
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noreferrer"
    target="_blank"
  >
    Launch Admin Console
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items self managed cluster should render (self managed) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.adminconsole"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Launch Admin Console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
  >
    Edit Display Name
  </DropdownItem>
  <DropdownItem
    component="button"
    isDisabled={true}
    key="undefined.menu.editcluster"
    tooltip={
      <span>
        Self managed cluster cannot be edited
      </span>
    }
  >
    Scale Cluster
  </DropdownItem>
</Fragment>
`;
